examples/examples/snapshots/surf_client__test__running_query.snap
---
source: examples/examples/surf-client.rs
expression: result.data
---
Some(
    FilmDirectorQuery {
        film: Some(
            Film {
                title: Some(
                    "A New Hope",
                ),
                director: Some(
                    "George Lucas",
                ),
            },
        ),
    },
)
