examples/examples/snapshots/surf_client__test__snapshot_test_menu_query.snap
---
source: examples/examples/surf-client.rs
expression: query.query
---
query Query($_0: ID) {
  film(id: $_0) {
    title
    director
  }
}

