examples/examples/snapshots/surf_client__test__snapshot_test_query.snap
---
source: examples/examples/surf-client.rs
assertion_line: 74
expression: query.query

---
query($id: ID) {
  film(id: $id) {
    title
    director
  }
}


